--- a/gamba/sass/layout/_navigation.scss
+++ b/gamba/sass/layout/_navigation.scss
@@ -25,12 +25,13 @@
         @include respond (phone) {
             transition: all .5s ease;
             background-color: $color-green-2;
+            /* backdrop-filter: blur(1rem); */
 
             position: fixed;
             right: 0;
             top: 0;
             z-index: 10;
-            width: 100%;
+            width: 80%;
             height: 100vh;
             transform: translateX(100%);
     
@@ -42,24 +43,27 @@
         
         &-items {
             display: flex;
-            list-style: none;
+            
 
             @include respond(phone) {
-
                 flex-direction: column;
-                justify-content: center;
-                align-content: center;
 
-                width: 100%;
-                height: 100%;
                 align-items: center;
+                justify-content: center;
+
+                height: 100%;
+
+                & > :not(:last-child) {
+                    margin-bottom: 6rem;
+                }
             }
         }
         &-links {
             margin-left: 4rem;
+            list-style: none;
 
             @include respond(phone) {
-                margin: 3rem 0 0 3rem;
+                margin-left: 0;
             }
         }
         &-link:link,
@@ -71,16 +75,14 @@
             transition: all .5;
 
             @include respond(phone) {
-                font-size: 2.2rem;
-                font-weight: 400;
+                font-size: 3rem;
+                font-weight: 500;
+                color: $white;
             }
 
-            &:hover {
+            &:hover,
+            &:active {
                 color: $color-green-1;
-
-                @include respond(phone) {
-                    color: $white-light;
-                }
             }
         }
     }
