--- a/gamba/sass/layout/_product.scss
+++ b/gamba/sass/layout/_product.scss
@@ -14,7 +14,11 @@
       &__nav {
             &-items {
                   display: flex;
-                  justify-content: center;
+                  justify-content: space-evenly;
+
+                  @include respond (phone) {
+                        justify-content: space-between;
+                  }
             }
             &-item {
                   list-style: none;
@@ -25,6 +29,10 @@
                   font-size: 2rem;
                   color: rgba($black, .5);
                   font-weight: 500;
+
+                  @include respond (phone) {
+                        margin: 0;
+                  }
             }
 
       .active {
