add vora app project

--- a/gamba/css/style.comp.css
+++ b/gamba/css/style.comp.css
@@ -210,8 +210,8 @@ body {
     transition: all .5; }
     @media only screen and (max-width: 37.5em) {
       .header__nav-link:link, .header__nav-link:visited {
-        font-size: 3rem;
-        font-weight: 500;
+        font-size: 2.4rem;
+        font-weight: 400;
         color: white; } }
     .header__nav-link:link:hover, .header__nav-link:link:active, .header__nav-link:visited:hover, .header__nav-link:visited:active {
       color: #85bc45; }
@@ -314,7 +314,10 @@ body {
     justify-self: center; }
   .products__nav-items {
     display: flex;
-    justify-content: center; }
+    justify-content: space-evenly; }
+    @media only screen and (max-width: 37.5em) {
+      .products__nav-items {
+        justify-content: space-between; } }
   .products__nav-item {
     list-style: none; }
   .products__nav-link {
@@ -323,6 +326,9 @@ body {
     font-size: 2rem;
     color: rgba(0, 0, 0, 0.5);
     font-weight: 500; }
+    @media only screen and (max-width: 37.5em) {
+      .products__nav-link {
+        margin: 0; } }
   .products__nav .active {
     color: #85bc45; }
   .products__container {
