--- a/gamba/sass/base/_base.scss
+++ b/gamba/sass/base/_base.scss
@@ -1,49 +1,49 @@
 *,
 *::before,
 *::after {
-	padding: 0;
-	margin: 0;
-	box-sizing: inherit;
+    padding: 0;
+    margin: 0;
+    box-sizing: inherit;
 }
 
 html {
-	scroll-behavior: smooth;
-	font-size: 62.5%;
+    scroll-behavior: smooth;
+    font-size: 62.5%;
 
-	@include respond(big-desktop) {
-		font-size: 75%;
-	}
+    @include respond(big-desktop) {
+        font-size: 75%;
+    }
 
-	@include respond(tab-land) {
-		font-size: 56.25%;
-	}
+    @include respond(tab-land) {
+        font-size: 56.25%;
+    }
 
-	@include respond(tab-port) {
-		font-size: 50%;
-	}
-	@include respond (phone) {
-		font-size: 37.5%;
-	}
-
+    @include respond(tab-port) {
+        font-size: 50%;
+    }
+    @include respond(phone) {
+        font-size: 45%;
+    }
 }
 
 body {
-	box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 .container {
-	display: grid;
+    display: grid;
 
-	grid-template-columns: [full-start] minmax(6rem, 1fr)
-				     [center-start] repeat(2, minmax(min-content, 60rem)) [center-end]
-				     minmax(6rem, 1fr) [full-end];
+    grid-template-columns:
+        [full-start] minmax(6rem, 1fr)
+        [center-start] repeat(2, minmax(min-content, 60rem)) [center-end]
+        minmax(6rem, 1fr) [full-end];
 
-	grid-template-rows: 100vh min-content;
+    grid-template-rows: 100vh min-content;
 
-	row-gap: 2rem;
+    row-gap: 2rem;
 
-	::selection {
-		color: $white;
-		background-color: $color-green-1;
-	}
+    ::selection {
+        color: $white;
+        background-color: $color-green-1;
+    }
 }
