--- a/gamba/sass/components/_button.scss
+++ b/gamba/sass/components/_button.scss
@@ -7,9 +7,9 @@
     font-family: $font-secondary;
     text-transform: uppercase;
     box-shadow: 0 0.5rem 1rem rgba($black, 0.3);
-    transition: all .3s;
+    transition: all 0.3s;
 
-    @include respond (phone) {
+    @include respond(phone) {
         font-size: 1.6rem;
     }
 
@@ -20,14 +20,14 @@
 
     &:hover {
         cursor: pointer;
-        transform: translateY(-.2rem);
+        transform: translateY(-0.2rem);
         background-color: $color-green-2;
-        box-shadow: 0 .6rem 1.2rem rgba($black, 0.3);
+        box-shadow: 0 0.6rem 1.2rem rgba($black, 0.3);
     }
 
     &:active {
         transform: translateY(0);
-        box-shadow: 0 .3rem .6rem rgba($black, 0.3);
+        box-shadow: 0 0.3rem 0.6rem rgba($black, 0.3);
     }
 }
 
@@ -36,8 +36,4 @@
     font-size: 1.5rem;
     text-decoration: none;
     font-weight: 600;
-
-    @include respond (tab-port) {
-        font-size: 1.2rem;
-    }
 }
